[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/level.gd" type="Script" id=1]
[ext_resource path="res://Sprites/General/blueDot.png" type="Texture" id=2]
[ext_resource path="res://Sprites/tiles/basic/dark tile.png" type="Texture" id=3]
[ext_resource path="res://Sprites/tiles/basic/new border grey tile.png" type="Texture" id=4]
[ext_resource path="res://Sprites/overlays/diagnol overlay.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Untitled_Artwork 2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Untitled_Artwork.jpg" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/font4.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
extra_spacing_space = 1
font_data = SubResource( 1 )

[node name="level" type="Node2D" groups=[
"levels",
]]
script = ExtResource( 1 )

[node name="background_imgs" type="Node2D" parent="."]
modulate = Color( 0.392157, 0.607843, 0.823529, 1 )
z_index = -100

[node name="Sprite2" type="Sprite" parent="background_imgs"]
position = Vector2( 971.564, 589.727 )
scale = Vector2( 21.8728, 15.1118 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="background_imgs"]
position = Vector2( 975.807, 552.958 )
scale = Vector2( 66, 66 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="background_imgs"]
modulate = Color( 0, 0, 1, 0.00784314 )
position = Vector2( 975.807, 552.958 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 5 )

[node name="tile_container" type="Node2D" parent="."]
rotation = 0.785398

[node name="text_overlay" type="Node2D" parent="."]
position = Vector2( 1100, -100 )
z_index = 15

[node name="background" type="Sprite" parent="text_overlay"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -75.8641, 6.53815 )
scale = Vector2( 2.27, 0.72 )
texture = ExtResource( 7 )

[node name="background2" type="Sprite" parent="text_overlay"]
modulate = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
position = Vector2( -75.8641, 6.53815 )
scale = Vector2( 2.25, 0.7 )
texture = ExtResource( 7 )

[node name="seperator left" type="Sprite" parent="text_overlay"]
modulate = Color( 0, 0, 0, 0.588235 )
position = Vector2( -280, 7 )
scale = Vector2( 0.05, 1.439 )
texture = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="seperator right" type="Sprite" parent="text_overlay"]
modulate = Color( 0, 0, 0, 0.0980392 )
position = Vector2( 125, 7 )
scale = Vector2( 0.05, 1.439 )
texture = ExtResource( 4 )

[node name="tile_text" type="Label" parent="text_overlay"]
margin_left = -687.293
margin_top = -78.1924
margin_right = -287.293
margin_bottom = 91.8076
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character_stats" type="Label" parent="text_overlay"]
margin_left = -277.293
margin_top = -78.1924
margin_right = 122.707
margin_bottom = 91.8076
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="additional_details" type="Label" parent="text_overlay"]
margin_left = 132.707
margin_top = -78.1924
margin_right = 532.707
margin_bottom = 91.8076
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="text_overlay"]
margin_left = -1057.0
margin_top = 133.0
margin_right = -912.0
margin_bottom = 238.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="text_overlay/Button"]
position = Vector2( 73.4475, 52.0774 )
scale = Vector2( 1.14811, 0.805749 )

[node name="Sprite2" type="Sprite" parent="text_overlay"]
modulate = Color( 0, 0, 0, 0.392157 )
position = Vector2( -984.26, 186.315 )
scale = Vector2( 0.260362, 0.384504 )
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="text_overlay"]
modulate = Color( 0, 0, 0, 0.215686 )
position = Vector2( -988.326, 189.32 )
scale = Vector2( 0.250345, 0.362113 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="text_overlay"]
margin_left = -1057.0
margin_top = 134.0
margin_right = -961.0
margin_bottom = 205.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "END TURN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starting_tile" type="Node2D" parent="."]
visible = false
position = Vector2( 103, 105 )

[node name="debug_sprite" type="Sprite" parent="starting_tile"]
texture = ExtResource( 2 )
[connection signal="mouse_entered" from="text_overlay/Button" to="." method="_on_end_turn_button_mouse_entered"]
[connection signal="mouse_exited" from="text_overlay/Button" to="." method="_on_end_turn_button_mouse_exited"]
[connection signal="pressed" from="text_overlay/Button" to="." method="_on_end_turn_button_pressed"]
